# redmine

./: .gitignore  Gemfile  README.md
app/controllers/: activities_controller.rb  admin_controller.rb  attachment_fulltext_controller.rb  (+25 more)
clients/redmine-cli/: README.md  pyproject.toml
clients/redmine-cli/redmine_cli/: cli.py  client.py  config.py  help_text.py  output.py  resolvers.py
clients/redmine-cli/redmine_cli/commands/: _helpers.py  activity.py  attachment.py  auth.py  board.py  bulk.py  category.py  document.py  elasticsearch.py  file.py  fulltext.py  group.py  help_cmd.py  import_cmd.py  issue.py  journal.py  label.py  member.py  message.py  myaccount.py  news.py  project.py  query.py  reaction.py  ref.py  relation.py  repository.py  search.py  time.py  user.py  version.py  webhook.py  wiki.py
clients/redmine-cli/skills/redmine/: SKILL.md
clients/redmine-cli/tests/: conftest.py  test_activity.py  test_attachment.py  test_attachment_extra.py  test_auth.py  test_board.py  test_bulk.py  test_category.py  test_document.py  test_elasticsearch.py  test_file.py  test_fulltext.py  test_group.py  test_help.py  test_issue.py  test_journal.py  test_label.py  test_member.py  test_message.py  test_myaccount.py  test_news.py  test_project.py  test_project_lifecycle.py  test_query.py  test_reaction.py  test_reference.py  test_relation.py  test_search.py  test_smoke.py  test_time.py  test_user.py  test_user_admin.py  test_version.py  test_webhook.py  test_wiki.py
config/: application.rb  elasticsearch.yml  importmap.rb  routes.rb  settings.yml
public/: jstoolbar
(+167 files in other folders)
