[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmine-cli"
version = "0.1.0"
description = "Command-line client for Redmine (with multi-host support, JSON output, agent-friendly UX)"
requires-python = ">=3.10"
authors = [{name = "Redmine Fork"}]
license = {text = "GPL-2.0-or-later"}
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "PyYAML>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
redmine = "redmine_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["redmine_cli*"]
